--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,15 @@
 
     <string name="finish">완료</string>
 
+    <string name="deail_page">상세 페이지</string>
+    <string name="plan_name">약속 이름</string>
+    <string name="plan_name_hint">약속이름입력</string>
+    <string name="plan_date">약속 날짜</string>
+    <string name="plan_time">약속 시간</string>
+    <string name="plan_participant">참여자</string>
+    <string name="back_button">뒤로버튼</string>
+    <string name="menu_button">메뉴 버튼</string>
+    <string name="edit">수정</string>
+    <string name="delete">삭제</string>
+
 </resources>
