--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,10 @@
     <string name="edit">수정</string>
     <string name="delete">삭제</string>
 
+    <string name="invite_code_issue">초대 코드 발급</string>
+    <string name="plan">약속</string>
+    <string name="waiting_plan">대기중인 약속</string>
+    <string name="group_delete">모임 삭제</string>
+    <string name="group_out">모임 나가기</string>
+
 </resources>
