--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,18 @@
     <string name="invitecode_issue">초대코드가\n발급되었어요.</string>
     <string name="invitecode_expiration_period">초대 코드 유효 기간 :  </string>
 
+    <string name="January">1월</string>
+    <string name="February">2월</string>
+    <string name="March">3월</string>
+    <string name="April">4월</string>
+    <string name="May">5월</string>
+    <string name="June">6월</string>
+    <string name="July">7월</string>
+    <string name="August">8월</string>
+    <string name="September">9월</string>
+    <string name="October">10월</string>
+    <string name="November">11월</string>
+    <string name="December">12월</string>
+
 
 </resources>
