--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,7 @@
     <string name="November">11월</string>
     <string name="December">12월</string>
 
+    <string name="cancel">취소</string>
+
 
 </resources>
